--- a/src/app/components/preload-list/preload-list.component.scss
+++ b/src/app/components/preload-list/preload-list.component.scss
@@ -1,4 +1,10 @@
 div {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.img_load_list {
+  border-radius: 15% !important;
+  height: auto;
+  width: 100%;
 }
