--- a/src/app/pages/events/events.page.html
+++ b/src/app/pages/events/events.page.html
@@ -203,22 +203,23 @@
         item.direccion)"
       >
         <ion-avatar item-start class="image-event">
-          <!-- 
           <ion-img [src]="item.imagen.url" class="img-elem"></ion-img>
-          -->
+          <!-- 
           <app-preload-list [url]="item.imagen.url"
                             [urlPreload]="preloadImageList"
                             [alt]="item.nombre"
-                            [ngClass]="['img-elem', 'imagen-event']" >
+                             >
           </app-preload-list>
+          -->
+
         </ion-avatar>
         <div class="info-event">
-          <div id="filters" class="fecha">
+          <div class="fecha">
             {{item.fechaInicio | date:'dd.MM.yyyy - HH:mm'}} hs
           </div>
-          <div id="filters" class="titulo">{{item.nombre}}</div>
+          <div class="titulo">{{item.nombre}}</div>
           <!-- <div id="filters" class="descripcion">{{ item.descripcion }}</div> -->
-          <div id="filters" class="descripcion">
+          <div  class="descripcion">
             {{ item.distancia | formatDistancia}}
           </div>
         </div>
