--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -93,20 +93,17 @@
                 </div>
               </span>
               <ion-fab horizontal="end" vertical="bottom" edge slot="fixed">
-                <ion-fab-button color="circuits">
-                  <ion-icon color="light" class="custom" name="play"></ion-icon>
+                <ion-fab-button color="tertiary">
+                  <ion-img class="accessibility" src="/assets/icon/accessibility.svg"></ion-img>
                 </ion-fab-button>
-                <ion-fab-list side="start">
-                  <ion-fab-button color="light">
-                    <ion-icon name="logo-facebook"></ion-icon>
+                <ion-fab-list side="start" class="list_access">
+                  <ion-fab-button class="fab-button-access" color="light">
+                    <ion-img class="accessibility-option" src="/assets/icon/accessible-icon-brands.svg"></ion-img>
                   </ion-fab-button>
-                  <ion-fab-button color="light">
-                    <ion-icon name="logo-twitter"></ion-icon>
+                  <ion-fab-button class="fab-button-access" color="light">
+                    <ion-img class="accessibility-option" src="/assets/icon/toilet-solid.svg"></ion-img>
                   </ion-fab-button>
-                  <ion-fab-button color="light">
-                    <ion-icon name="logo-vimeo"></ion-icon>
-                  </ion-fab-button>
-                </ion-fab-list>
+                  </ion-fab-list>
               </ion-fab>
             </ion-card-content>
 
