Quitando barras y agregando preload para listas

--- a/src/app/components/preload-list/preload-list.component.html
+++ b/src/app/components/preload-list/preload-list.component.html
@@ -1,4 +1,4 @@
 <div>
-  <img [style.display]="viewImage == true ? 'block': 'none'" [src]="url" (load)="mostrarImagen()" class="img_load_list">
-  <img [style.display]="viewImage == true ? 'none': 'block'" [src]="urlPreload" class="img_load_list">
+  <img [style.display]="viewImage == true ? 'block': 'none'" [src]="url" (load)="mostrarImagen()" [class]="clase">
+  <img [style.display]="viewImage == true ? 'none': 'block'" [src]="urlPreload" [class]="clase">
 </div>
