--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -1,6 +1,3 @@
-<ion-header [translucent]="true">
-  <ion-toolbar color="party"> </ion-toolbar>
-</ion-header>
 <ion-content>
   <div id="alto" class="slider">
     <ion-slides class="sliderPrimero setHeight" scrollbar="false" pager="false" [options]="slideOpts">
@@ -80,7 +77,7 @@
       <ng-container *ngFor="let item of places | filterPlaces:dataForm">
         <ng-container *ngIf="item.vacio !== 1">
           <ion-card *ngIf="(item.distanciaNumber <= dist || dep != null)" id="{{ item.id }}">
-            <ion-card-header color="party" id="place-title" [routerLink]="['/place-selected', item.id]"
+            <ion-card-header color="information" id="place-title" [routerLink]="['/place-selected', item.id]"
               (click)="getPlace(item.id); sumaVisitaLugar(item.id)">
               {{ item.nombre }}<span class="categoria">&nbsp;&nbsp;({{item.tipo}})</span>
             </ion-card-header>
@@ -93,7 +90,7 @@
                 </div>
               </span>
               <ion-fab horizontal="end" vertical="bottom" edge slot="fixed">
-                <ion-fab-button color="tertiary">
+                <ion-fab-button color="information">
                   <ion-img class="accessibility" src="/assets/icon/accessibility.svg"></ion-img>
                 </ion-fab-button>
                 <ion-fab-list side="start" class="list_access">
