--- a/src/app/pages/where-eat/where-eat.page.html
+++ b/src/app/pages/where-eat/where-eat.page.html
@@ -1,9 +1,3 @@
-<ion-header>
-  <ion-toolbar color="eat">
-    <ion-icon slot="start" name="restaurant-outline"></ion-icon>
-    <ion-title>¿Dónde Comer?</ion-title>
-  </ion-toolbar>
-</ion-header>
 <ion-content>
   <div class="slider">
     <ion-slides
@@ -82,10 +76,9 @@
             <div class="imagen">
                 <ion-avatar item-start>
                   <app-preload-list
-                    class="img-elem"
-                    id="foto"
                     [url]="item.imagen.url"
                     [alt]="item.nombre"
+                    [clase]="preloadClase"
                     [urlPreload]="preloadImage_list"
                   ></app-preload-list>
                 </ion-avatar>
