--- a/src/app/pages/where-eat/where-eat.page.scss
+++ b/src/app/pages/where-eat/where-eat.page.scss
@@ -6,8 +6,7 @@
   padding: 0px !important;
 }
 
-ion-avatar,
-ion-avatar > img {
+ion-avatar {
   border-radius: 15% !important;
   height: auto;
   width: 100%;
