--- a/src/app/pages/place/place.page.html
+++ b/src/app/pages/place/place.page.html
@@ -1,26 +1,51 @@
 <ion-content>
   <div id="alto" class="slider">
-    <ion-slides class="sliderPrimero setHeight" scrollbar="false" pager="false" [options]="slideOpts">
+    <ion-slides
+      class="sliderPrimero setHeight"
+      scrollbar="false"
+      pager="false"
+      [options]="slideOpts"
+    >
       <ion-slide *ngFor="let item of sliderPlace" class="sliderHijo">
         <!-- 
         <ion-img class="imgSlider" [src]="item.imagen.url"></ion-img>
         -->
-        <app-preload [url]="item.imagen.url" [alt]="item.imagen.name" [urlPreload]="preloadImage"></app-preload>
+        <app-preload
+          [url]="item.imagen.url"
+          [alt]="item.imagen.name"
+          [urlPreload]="preloadImage"
+        ></app-preload>
       </ion-slide>
     </ion-slides>
     <!-- =========>=>=>=> Filtro =========>=>=>=> -->
     <div class="filter_place">
       <ion-label
         *ngIf="!selectdistancia && (optionLocation === null || optionLocation === 'localidad' || optionLocation === '')"
-        (click)="changeFilterLocation()" id="filters">localidad</ion-label>
+        (click)="changeFilterLocation()"
+        id="filters"
+        >localidad</ion-label
+      >
       <ion-label
         *ngIf=" !selectdistancia && (optionLocation !== null && optionLocation !== 'localidad' && optionLocation !== '')"
-        class="open_filter" (click)="changeFilterLocation()" id="filters">{{ optionLocation }}</ion-label>
+        class="open_filter"
+        (click)="changeFilterLocation()"
+        id="filters"
+        >{{ optionLocation }}</ion-label
+      >
       <img *ngIf="!selectdistancia" src="/assets/icon/exchange.png" alt="" />
-      <ion-label *ngIf="optionType === null || optionType === 'tipo' || optionType === ''" (click)="changeFilterType()"
-        id="filters">tipo</ion-label>
-      <ion-label *ngIf="optionType !== null && optionType !== 'tipo' && optionType !== ''" class="open_filter"
-        (click)="changeFilterType()" id="filters">{{ optionType }}</ion-label>
+      <ion-label
+        *ngIf="optionType === null || optionType === 'tipo' || optionType === ''"
+        (click)="changeFilterType()"
+        id="filters"
+        >tipo</ion-label
+      >
+      <ion-label
+        *ngIf="optionType !== null && optionType !== 'tipo' && optionType !== ''"
+        class="open_filter"
+        (click)="changeFilterType()"
+        id="filters"
+        >{{ optionType }}</ion-label
+      >
     </div>
 
     <div>
@@ -32,12 +57,20 @@
           </div>
           <div>
             <ion-list class="list_type">
-              <ion-radio-group (ionChange)="filterPlace()" formControlName="localidad" class="type_border">
+              <ion-radio-group
+                (ionChange)="filterPlace()"
+                formControlName="localidad"
+                class="type_border"
+              >
                 <ion-item class="filter_list" lines="none">
                   <ion-text id="filters">Todo</ion-text>
                   <ion-radio slot="end" value=""></ion-radio>
                 </ion-item>
-                <ion-item class="filter_list" lines="none" *ngFor="let loc of localidades">
+                <ion-item
+                  class="filter_list"
+                  lines="none"
+                  *ngFor="let loc of localidades"
+                >
                   <ion-text id="filters">{{ loc }}</ion-text>
                   <ion-radio slot="end" value="{{ loc }}"></ion-radio>
                 </ion-item>
@@ -54,12 +87,20 @@
           </div>
           <div>
             <ion-list class="list_type">
-              <ion-radio-group (ionChange)="filterPlace()" formControlName="tipo" class="type_border">
+              <ion-radio-group
+                (ionChange)="filterPlace()"
+                formControlName="tipo"
+                class="type_border"
+              >
                 <ion-item class="filter_list" lines="none">
                   <ion-text id="filters">Todo</ion-text>
                   <ion-radio slot="end" value=""></ion-radio>
                 </ion-item>
-                <ion-item class="filter_list last" lines="none" *ngFor="let tipo of tipos">
+                <ion-item
+                  class="filter_list last"
+                  lines="none"
+                  *ngFor="let tipo of tipos"
+                >
                   <ion-text id="filters">{{ tipo }}</ion-text>
                   <ion-radio slot="end" value="{{ tipo }}"></ion-radio>
                 </ion-item>
@@ -76,34 +117,76 @@
     <ion-list>
       <ng-container *ngFor="let item of places | filterPlaces:dataForm">
         <ng-container *ngIf="item.vacio !== 1">
-          <ion-card *ngIf="(item.distanciaNumber <= dist || dep != null)" id="{{ item.id }}">
-            <ion-card-header color="information" id="place-title" [routerLink]="['/place-selected', item.id]"
-              (click)="getPlace(item.id); sumaVisitaLugar(item.id)">
-              {{ item.nombre }}<span class="categoria">&nbsp;&nbsp;({{item.tipo}})</span>
+          <ion-card
+            *ngIf="(item.distanciaNumber <= dist || dep != null)"
+            id="{{ item.id }}"
+          >
+            <ion-card-header
+              color="information"
+              id="place-title"
+              [routerLink]="['/place-selected', item.id]"
+              (click)="getPlace(item.id); sumaVisitaLugar(item.id)"
+            >
+              {{ item.nombre }}<span class="categoria"
+                >&nbsp;&nbsp;({{item.tipo}})</span
+              >
             </ion-card-header>
             <ion-card-content>
-              <span [routerLink]="['/place-selected', item.id]" (click)="getPlace(item.id); sumaVisitaLugar(item.id)">
-                <app-preload class="imgCard" [url]="item.imagenHome['url']" [alt]="item.nombre"
-                  [urlPreload]="preloadImage"></app-preload>
+              <span
+                [routerLink]="['/place-selected', item.id]"
+                (click)="getPlace(item.id); sumaVisitaLugar(item.id)"
+              >
+                <div class="img_min">
+                  <app-preload
+                    [url]="item.imagenHome['url']"
+                    [alt]="item.nombre"
+                    [urlPreload]="preloadImage"
+                    [clase]="preload_card"
+                  ></app-preload>
+                </div>
                 <div class="duracion">
-                  <b class="distancia">{{item.distancia | formatDistancia }} </b>
+                  <b class="distancia"
+                    >{{item.distancia | formatDistancia }}
+                  </b>
                 </div>
               </span>
-              <ion-fab horizontal="end" vertical="bottom" edge slot="fixed">
+              <ion-fab
+                horizontal="end"
+                vertical="bottom"
+                edge
+                slot="fixed"
+                *ngIf="item.accesibilidad.rampa || item.accesibilidad.banio"
+              >
                 <ion-fab-button color="information">
-                  <ion-img class="accessibility" src="/assets/icon/accessibility.svg"></ion-img>
+                  <ion-img
+                    class="accessibility"
+                    src="/assets/icon/accessibility.svg"
+                  ></ion-img>
                 </ion-fab-button>
                 <ion-fab-list side="start" class="list_access">
-                  <ion-fab-button class="fab-button-access" color="light">
-                    <ion-img class="accessibility-option" src="/assets/icon/accessible-icon-brands.svg"></ion-img>
+                  <ion-fab-button
+                    class="fab-button-access"
+                    color="light"
+                    *ngIf="item.accesibilidad.rampa"
+                  >
+                    <ion-img
+                      class="accessibility-option"
+                      src="/assets/icon/accessible-icon-brands.svg"
+                    ></ion-img>
                   </ion-fab-button>
-                  <ion-fab-button class="fab-button-access" color="light">
-                    <ion-img class="accessibility-option" src="/assets/icon/toilet-solid.svg"></ion-img>
+                  <ion-fab-button
+                    class="fab-button-access"
+                    color="light"
+                    *ngIf="item.accesibilidad.banio"
+                  >
+                    <ion-img
+                      class="accessibility-option"
+                      src="/assets/icon/toilet-solid.svg"
+                    ></ion-img>
                   </ion-fab-button>
-                  </ion-fab-list>
+                </ion-fab-list>
               </ion-fab>
             </ion-card-content>
-
           </ion-card>
         </ng-container>
 
@@ -125,8 +208,13 @@
             <ion-skeleton-text animated style="width: 80%"></ion-skeleton-text>
           </ion-card-header>
           <ion-card-content>
-            <ion-img src="/assets/img/img-skeleton.svg"></ion-img>
-            <ion-skeleton-text animated style="width: 30%; margin: 5px 0 5px 10px"></ion-skeleton-text>
+            <div class="img_skeleton">
+              <ion-img src="/assets/img/img-skeleton.svg"></ion-img>
+            </div>
+            <ion-skeleton-text
+              animated
+              style="width: 30%; margin: 5px 0 5px 10px;"
+            ></ion-skeleton-text>
           </ion-card-content>
         </ion-card>
       </ng-container>
