ajuste filtro inicial

--- a/src/app/pages/home-menu/home-menu.page.html
+++ b/src/app/pages/home-menu/home-menu.page.html
@@ -111,14 +111,14 @@
         <div
           class="div__menu-izq"
           id="filter_null_izq"
-          (click)="presentAlert()"
+          (click)="presentAlert(); presentAlertDepto()"
         >
           ¿dónde ir?
         </div>
         <div
           class="div__menu-izq"
           id="filter_null_izq"
-          (click)="presentAlert()"
+          (click)="presentAlert(); presentAlertDepto()"
         >
           ¿dónde<br />
           comer?
@@ -126,7 +126,7 @@
         <div
           class="div__menu-izq"
           id="filter_null_izq"
-          (click)="presentAlert()"
+          (click)="presentAlert(); presentAlertDepto()"
         >
           artistas
         </div>
@@ -135,14 +135,14 @@
         <div
           class="div__menu-der"
           id="filter_null_der"
-          (click)="presentAlert()"
+          (click)="presentAlert(); presentAlertDepto()"
         >
           ¿qué hacer?
         </div>
         <div
           class="div__menu-der"
           id="filter_null_der"
-          (click)="presentAlert()"
+          (click)="presentAlert(); presentAlertDepto()"
         >
           ¿dónde<br />
           dormir?
@@ -150,7 +150,7 @@
         <div
           class="div__menu-der"
           id="filter_null_der"
-          (click)="presentAlert()"
+          (click)="presentAlert(); presentAlertDepto()"
         >
           Casa<br />
           Dominga
